syntax = "proto3";

// package x51;

message ConnectParams {
    string address = 1;
    uint32 port = 2;
    ConnectionIdentity connectionId = 3;
    string password = 4;
}

message Result {
    bool ok = 1;
    int32 errorCode = 2;
    string errorCategory = 3;
    string message = 4;
    // string errorString = 3;
}

message ConnectionIdentity {
    string account = 1;
    string service = 2;
    uint32 connectionIndex = 3;
}

